syntax = "proto3";
option csharp_namespace = "GrpcLearn.ClientStream";
package clientStream;

message Request{
  string content = 1;
}

message Response{
  string content = 1;
}

service MessengerClient{
  rpc ClientDataStream (stream Request) returns (Response);
}